--- a/camel_springboot/src/main/resources/application.properties
+++ b/camel_springboot/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.datasource.url: jdbc:h2:./data/cameldb;DB_CLOSE_ON_EXIT=FALSE;AUTO_SERVER
 spring.datasource.platform : h2
 #logging.level.org.hibernate.SQL: DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+
+
+logging.file=${user.home}/log/camel-springboot.log
