reading from sql and queue it to ActiveMQ then dequeue from ActiveMQ and print messages.

--- a/camel_springboot/src/main/resources/application.properties
+++ b/camel_springboot/src/main/resources/application.properties
@@ -12,3 +12,10 @@ spring.datasource.platform : h2
 
 
 logging.file=${user.home}/log/camel-springboot.log
+
+#activemq
+spring.activemq.broker-url=tcp://127.0.0.1:61616
+spring.activemq.pool.enabled=true
+spring.activemq.pool.max-connections=10
+
+
