the route will take the request convert it to Order object push it to ActiveMQ, then a second route will read Order from ActiveMQ and print it.

--- a/camel_springboot/src/main/resources/application.properties
+++ b/camel_springboot/src/main/resources/application.properties
@@ -17,5 +17,6 @@ logging.file=${user.home}/log/camel-springboot.log
 spring.activemq.broker-url=tcp://127.0.0.1:61616
 spring.activemq.pool.enabled=true
 spring.activemq.pool.max-connections=10
+spring.activemq.packages.trusted=com.learn.camel_springboot.models
 
 
