read from database all new orders and convert them to Order objects then write them to ORDERS queue. reads from ORDERS queue convert to json object and write to JSON_ORDERS queue. reads from JSON_ORDERS and write to other queues based on Order.type.
read messages from BAGS_ORDERS queue and post them to http://localhost:7777/ http service.

--- a/camel_springboot/src/main/resources/application.properties
+++ b/camel_springboot/src/main/resources/application.properties
@@ -19,4 +19,5 @@ spring.activemq.pool.enabled=true
 spring.activemq.pool.max-connections=10
 spring.activemq.packages.trusted=com.learn.camel_springboot.models
 
+server.port=7777
 
