--- a/camel_springboot/pom.xml
+++ b/camel_springboot/pom.xml
@@ -74,6 +74,13 @@
 			<version>2.21.0</version>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.apache.camel</groupId>
+			<artifactId>camel-http4</artifactId>
+			<version>2.21.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
