--- a/camel_springboot/src/main/resources/application.properties
+++ b/camel_springboot/src/main/resources/application.properties
@@ -21,3 +21,4 @@ spring.activemq.packages.trusted=com.learn.camel_springboot.models
 
 server.port=7777
 
+restEndPoint=http4://localhost:${server.port}/
