write integration test

--- a/camel_springboot/src/main/resources/application.properties
+++ b/camel_springboot/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.activemq.packages.trusted=com.learn.camel_springboot.models
 server.port=7777
 
 restEndPoint=http4://localhost:${server.port}/
+#restEndPoint=http4://localhost:7777/
+bagsOrderSource=activemq:BAGS_ORDERS
