--- a/camel_springboot/src/main/resources/application-test.properties
+++ b/camel_springboot/src/main/resources/application-test.properties
@@ -1,3 +1,8 @@
 restEndPoint=mock:http4
 #restEndPoint=http4://localhost:7777/
 bagsOrderSource=direct:bagsOrderSource
+
+animalSource=direct:animalSource
+dogEndpoint=mock:dogEndpoint
+catEndpoint=mock:catEndpoint
+otherEndpoint=mock:otherEndpoint
