--- a/camel_springboot/src/main/resources/application.properties
+++ b/camel_springboot/src/main/resources/application.properties
@@ -24,3 +24,8 @@ server.port=7777
 restEndPoint=http4://localhost:${server.port}/
 #restEndPoint=http4://localhost:7777/
 bagsOrderSource=activemq:BAGS_ORDERS
+
+animalSource=file://animals
+dogEndpoint=file://dogs
+catEndpoint=file://cats
+otherEndpoint=file://others
