write integration test

--- a/camel_springboot/src/main/resources/application.properties
+++ b/camel_springboot/src/main/resources/application.properties
@@ -29,3 +29,14 @@ animalSource=file://animals
 dogEndpoint=file://dogs
 catEndpoint=file://cats
 otherEndpoint=file://others
+
+#camel configuration
+camel.springboot.shutdown-timeout=300
+
+#enable logging
+logging.level.org.apache.camel=WARN
+
+
+#Timer Route
+timer-route.start=timer://TimerRoute?fixedRate=true&period=10s
+timer-route.log-endPoint=log://?level=WARN&showBody=true
