--- a/kafka/pom.xml
+++ b/kafka/pom.xml
@@ -2,15 +2,32 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>camel_springboot</artifactId>
-        <groupId>com.learn</groupId>
-        <version>0.0.1-SNAPSHOT</version>
-        <relativePath>../camel_springboot/pom.xml</relativePath>
-    </parent>
+    <version>0.0.1-SNAPSHOT</version>
+    <groupId>com.learn</groupId>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>kafka</artifactId>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.apache.kafka/kafka-clients -->
+        <dependency>
+            <groupId>org.apache.kafka</groupId>
+            <artifactId>kafka-clients</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+
+    </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 
 </project>
